--- a/week5/project/mymoviz/part5/reactapp/package.json
+++ b/week5/project/mymoviz/part5/reactapp/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://localhost:3000",
+  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": [
       "react-app",
