--- a/week7/project/part2/package.json
+++ b/week7/project/part2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "part1",
+  "name": "part2",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,21 +11,21 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~44.0.0",
+    "expo-location": "~14.0.1",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-maps": "0.29.4",
+    "react-native-web": "0.17.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
